# django-pwa-app

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
frontend/: .eslintrc  README.md  package-lock.json  package.json
frontend/webpack/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js  webpack.config.watch.js
templates/: index.html
