[tool.poetry]
name = "django-pwa-app"
version = "0.1.0"
description = "A tutorial on how to use PWA on Django"
authors = ["AccordBox"]

[tool.poetry.dependencies]
python = "^3.9.7"
Django = "^3.2.8"
python-webpack-boilerplate = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
